tests/diagnostics/tests/ui/not_a_recipe.stderr
error[E0277]: `NotARecipe` is not a recipe of `ButtonRecipe`
  --> tests/ui/not_a_recipe.rs:18:18
   |
18 |     let _button: HtmlButton<(SomeRecipe, NotARecipe)> = HtmlButton::from_cookbook();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ all recipes must implement `ButtonRecipe`
   |
help: the trait `granola::html::ButtonRecipe` is not implemented for `NotARecipe`
  --> tests/ui/not_a_recipe.rs:15:1
   |
15 | struct NotARecipe;
   | ^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `granola::html::ButtonRecipe`:
             ()
             (A, B)
             Btn
             BtnGhost
             BtnPrimary
             BtnSquare
             FormmethodDialog
             FormmethodGet
           and $N others
   = note: required for `(SomeRecipe, NotARecipe)` to implement `granola::html::ButtonRecipe`
note: required by a bound in `granola::html::HtmlButton`
  --> $WORKSPACE/crates/granola/src/html/elements/forms/button.rs
   |
   | pub struct HtmlButton<R: ButtonRecipe = ()> {
   |                          ^^^^^^^^^^^^ required by this bound in `HtmlButton`

error[E0277]: `NotARecipe` is not a recipe of `ButtonRecipe`
  --> tests/ui/not_a_recipe.rs:18:57
   |
18 |     let _button: HtmlButton<(SomeRecipe, NotARecipe)> = HtmlButton::from_cookbook();
   |                                                         ^^^^^^^^^^ all recipes must implement `ButtonRecipe`
   |
help: the trait `granola::html::ButtonRecipe` is not implemented for `NotARecipe`
  --> tests/ui/not_a_recipe.rs:15:1
   |
15 | struct NotARecipe;
   | ^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `granola::html::ButtonRecipe`:
             ()
             (A, B)
             Btn
             BtnGhost
             BtnPrimary
             BtnSquare
             FormmethodDialog
             FormmethodGet
           and $N others
   = note: required for `(SomeRecipe, NotARecipe)` to implement `granola::html::ButtonRecipe`
note: required by a bound in `granola::html::HtmlButton`
  --> $WORKSPACE/crates/granola/src/html/elements/forms/button.rs
   |
   | pub struct HtmlButton<R: ButtonRecipe = ()> {
   |                          ^^^^^^^^^^^^ required by this bound in `HtmlButton`
